# Lumine-backend

./: .dockerignore  .env.example  .gitignore  API_INTEGRATION.md  BACKEND_ARCHITECTURE_REVIEW.md  CODEBASE_REVIEW.md  Cargo.toml  DEPLOYMENT_MANUAL_STEPS.md  Dockerfile  ENCRYPTION_IMPLEMENTATION_PLAN.md  LICENSE  MOBILE_API_INTEGRATION.md  PLAN.md  README.md  SAFETY_BOT_STRATEGY.md  SAFETY_IMPLEMENTATION_PLAN.md  SAFETY_IMPLEMENTATION_SUMMARY.md  SCALEWAY_TF_PLAN.md  create_users_properly.py  docker-compose.yml  generate_exact_hash.py  generate_hash.py  reset_and_create_users.py  test_passwords.py  verify_hash.py
.github/workflows/: README.md  deploy.yml
docker/: migrate.sh
docker/seed/: seed.sh  seed.sql  seed_content.sql  upload_media.sh
docs/: API_INTEGRATION.md  ARCHITECTURE_BREAKDOWN.md  BACKEND_ARCHITECTURE_REVIEW.md  DEPLOYMENT_MANUAL_STEPS.md  ENCRYPTION_IMPLEMENTATION_PLAN.md  MOBILE_API_INTEGRATION.md  SAFETY_BOT_STRATEGY.md  SCALEWAY_TF_PLAN.md  STORIES_IMPLEMENTATION_PLAN.md
migrations/: 001_init.sql  002_auth_and_uploads.sql  003_social_graph_tuning.sql  004_notifications_and_moderation.sql  005_auth_paseto.sql  006_rate_limiting_and_trust.sql  007_invite_system.sql  009_production_hardening.sql  010_moderation_actor_nullable.sql
src/: lib.rs  main.rs
src/app/: auth.rs  engagement.rs  feed.rs  fingerprint.rs  invites.rs  media.rs  mod.rs  moderation.rs  notifications.rs  posts.rs  rate_limiter.rs  search.rs  social.rs  stories.rs  trust.rs  users.rs
src/config/: mod.rs  (+1 more)
tests/: auth.rs  media.rs  posts.rs  safety.rs  social.rs  users.rs
(+81 files in other folders)
