[package]
name = "ciel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip", "compression-br", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
ulid = { version = "1", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "json", "chrono", "time"] }
redis = { version = "0.25", features = ["tokio-comp"] }
aws-sdk-s3 = "1"
aws-config = "1"
aws-sdk-sqs = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
bytes = "1"
argon2 = "0.5.3"
base64 = "0.22.1"
pasetors = "0.7.7"
rand = "0.8"
url = "2"
